DHS-469: Glue v5.0.0 upgrade, Java 17, Spark, Gradle and Delta Lake version upgrades.